--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines":{
+    "node":"10.15.0",
+    "npm" :"6.9.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/seebrucke/heroku.git"
