--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
-    "express": "^4.17.0",
-    "node": "^12.2.0"
+    "express": "^4.17.0"
   }
 }
